# UTP

./: .gitignore  CMakeLists.txt  README.md  UTP.SerialClient.Win.sln  WVT_UTP.c  WVT_UTP.h  WVT_UTP_Memory.c  WVT_UTP_Memory.h  WVT_UTP_Types.h  build.sh  main.c  network.c  network.h  test.sh
UTP/: CMakeLists.txt  WVT_UTP.c  WVT_UTP.h  WVT_UTP_Memory.c  WVT_UTP_Memory.h  WVT_UTP_Types.h  main.c  network.c
UTP.Fw/: .mxproject  UTP.Fw.ioc
UTP.Fw/Core/Src/: main.c  stm32l0xx_hal_msp.c
UTP.Fw/EWARM/: Project.eww  UTP.Fw.ewd  UTP.Fw.ewp  UTP.Fw.ewt
UTP.SerialClient.Win/: MainApp.Designer.cs  MainApp.cs  MainApp.resx  Program.cs  SerialConnector.cs  UTP.SerialClient.Win.csproj
UTP.SerialClient.Win/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
UTP.SerialClient.Win/Response/: CreateSpaceReponse.cs  FreeSpaceResponse.cs  HeaderResponse.cs
UTPClient/: CMakeLists.txt  ITransport.h  Network.cpp  Network.h  SerialCommunication.cpp  SerialCommunication.h  SerialPort.cpp  SerialPort.h  UTool.h  UtpTool.cpp  UtpTool.h  main.cpp
